<resources>
    <string name="app_name">sample</string>

    <string name="restart"></string>

    <string name="back">返回</string>
    <string name="more">更多</string>

    <string name="invalid_data">数据无效</string>
    <string name="empty"></string>
    <string name="crash">Crash</string>
    <string name="hooks">Hooks</string>
    <string name="ding">Ding</string>
    <string name="ding_markdown">Ding Markdown</string>
    <string name="slack_file">send file</string>
    <string name="tasks">Tasks</string>
    <string name="swipe_sample">Swipe Sample</string>
    <string name="permission">Permission</string>
    <string name="permission_check">PermissionCheck</string>
    <string name="net_post_json">net_doPostAsJson</string>
    <string name="net_post">net_post</string>
    <string name="net_get">net_get</string>
    <string name="net_test">net_test</string>
    <string name="banner">banner</string>
    <string name="click">click</string>
    <string name="click_single">singleClick</string>
    <string name="call">call</string>

    <string name="dog_title_list">Dog List</string>
    <string name="dog_title_list_wrapper">Dog List Wrapper</string>
    <string name="dog_title_add">Dog Add</string>

    <string name="dog_title_detail">Dog Detail</string>
    <string name="dog_name_eng">Name Eng:</string>
    <string name="dog_name_cn">Name CN:</string>
    <string name="dog_from">From:</string>

    <string name="find_more">发现更多内容</string>
    <string name="find_more_up">上划加载更多</string>
    <string name="find_more_nore">没有更多了</string>

</resources>
