<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <include layout="@layout/layout_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_list_dog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog_title_list" />

            <Button
                android:id="@+id/btn_list_dog_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog_title_list_wrapper" />

            <Button
                android:id="@+id/btn_add_dog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog_title_add" />

            <Button
                android:id="@+id/btn_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/btn_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crash" />

            <Button
                android:id="@+id/btn_hooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hooks" />

            <Button
                android:id="@+id/btn_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tasks" />

            <Button
                android:id="@+id/btn_swipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swipe_sample" />

            <Button
                android:id="@+id/btn_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission" />

            <Button
                android:id="@+id/btn_permission_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_check"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_net_post_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_post_json" />

            <Button
                android:id="@+id/btn_net_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_post" />

            <Button
                android:id="@+id/btn_net_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_get" />

            <Button
                android:id="@+id/btn_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banner" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>